Modifica el subtitulo
Ahora no es un titulo sino un parrafo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <body>
             <h1>Bienvenido a la informaciónn web</h1>
-            <h2>Esta es la pagina</h2>
+            <p>Esta es la pagina</p>
 
         </body>
 </html>
