Se cambio el color de fondo
se cambio el color de fondo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
 
-        <body>
+    <body bgcolor="#99CCFF">
             <h1>Bienvenido a la informaciónn web</h1>
             <p>Esta es la pagina</p>
 
